Fri Jun  5 00:55:21 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: constify rb_method_refined_t::orig_me.

	  Also constify the following functions.

	  * rb_resolve_refined_method()
	  * rb_method_entry_with_refinements()
	  * rb_method_entry_without_refinements()
	  * rb_method_entry_copy()'s parameter.

	* class.c: catch up this fix.

	* vm_insnhelper.c: ditto.

	* vm_method.c: ditto.

Thu Jun  4 12:47:54 SGT 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* array.c: Revert r50763. because "reentered" is not typo.

Thu Jun  4 11:12:29 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/win32ole/win32ole.c: fix a typo. Patch by @davydovanton
	  [fix GH-923]
	* include/ruby/st.h: ditto.
	* include/ruby/util.h: ditto.

Thu Jun  4 10:54:30 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* array.c: fix a typo. Patch by @manish-shrivastava
	  [fix GH-922]

Thu Jun  4 09:52:02 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/lib/openssl/ssl.rb: use io/nonblock instead of fcntl
	  [ruby-core:69382] [Feature #11190]

Thu Jun  4 07:22:45 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: introduce rb_method_refined_t for refined method entry.

	* class.c (move_refined_method): catch up this fix.

	* gc.c (mark_method_entry): ditto.

	* vm_eval.c (vm_call0_body): ditto.

	* vm_insnhelper.c (vm_call_method): ditto.

	* vm_method.c: ditto.

Thu Jun  4 07:12:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dirent_match): match short names only when FNM_SHORTNAME
	  flag is given, for the backward compatibility, and the new
	  behavior is often dangerous.  [ruby-core:69435] [Bug #11206]

Thu Jun  4 05:44:01 2015  Eric Wong  <e@80x24.org>

	* variable.c (special_generic_ivar): remove flag
	  (givar_i, rb_mark_generic_ivar_tbl): remove functions
	  (rb_free_generic_ivar, rb_ivar_lookup, rb_ivar_delete,
	   generic_ivar_set, rb_ivar_set, rb_ivar_defined,
	   rb_copy_generic_ivar, rb_ivar_foreach, rb_ivar_count,
	   rb_obj_remove_instance_variable):