@@ -1,3 +1,11 @@
+Fri Jun  5 01:06:02 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_method.c (rb_add_method_iseq): use intermediate struct to
+	  avoid initializing struct with variables.
+	  [Bug #11217]
+
+	* method.h: add a comment about it.
+
 Fri Jun  5 00:55:21 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* method.h: constify rb_method_refined_t::orig_me.
